# privatebox-egress-enforcer

./: .coderabbit.yaml  .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.apache  Dockerfile.goreleaser  Dockerfile.init  Dockerfile.init.apache  Dockerfile.license-service  Makefile  PR-NOTES.md  README.md  codecov.yml  go.mod  go.sum
.clusterfuzzlite/: Dockerfile
.github/: PULL_REQUEST_TEMPLATE.md  requirements-pr-review.txt
.github/workflows/: ci.yaml  docker-apache.yaml  publish-verifiers.yaml  release.yaml  reusable-scan.yml  scorecard.yaml  security.yaml  verifiers.yaml
charts/pipelock/: Chart.yaml  README.md  values.schema.json  values.yaml
cmd/pipelock-hermes-hook/: hook.go  main.go  main_test.go
cmd/pipelock-playground-demo/: main.go  verify_cmd_test.go
cmd/pipelock-playground-live/: main.go  main_test.go
cmd/pipelock-playground-llm-agent/: main.go  main_test.go
cmd/pipelock-verifier/: aarp.go  aarp_honesty_test.go  aarp_svid.go  aarp_svid_test.go  aarp_test.go  auditpacket.go  chain.go  evidence.go  main.go  main_test.go  output.go  receipt.go  replay.go  replay_test.go
configs/: audit.yaml  balanced.yaml  claude-code.yaml  cursor.yaml  generic-agent.yaml  hostile-model.yaml  strict.yaml
docs/: attacks-blocked.md  benchmarks.md  bypass-resistance.md  comparison.md  configuration.md  contain-cli.md  false-positive-tuning.md  owasp-agentic-top15-mapping.md  owasp-llm-top10-mapping.md  owasp-mapping.md  performance.md  policy-spec-v0.1.md  rules.md  security-assurance.md
docs/cli/: README.md  conductor-recovery.md  conductor-stream.md  doctor.md  (+6 more)
enterprise/: config.go  edition_test.go  registry_test.go
schemas/: fleet-receipt-v1.schema.json
scripts/: check-helm-chart.sh  check-test-stability.sh  test-stability-allowlist.txt
sdk/verifiers/python/: .gitignore  README.md  pyproject.toml  requirements.txt
sdk/verifiers/python/src/pipelock_aarp_verify/: __init__.py  __main__.py  appraise.py  canonical.py  chain.py  cli.py  envelope.py  number.py  receipt.py  suite.py  svid.py  timestamp.py  trustdomain.py
sdk/verifiers/python/tests/: conftest.py  test_canonical.py  test_chain.py  test_cli.py  test_corpus_conformance.py  test_envelope_and_appraise.py  test_envelope_shapes.py  test_honesty.py  test_main_module.py  test_number.py  test_receipt_v2.py  test_signature_paths.py  test_suite_and_trustdomain.py  test_timestamp.py
sdk/verifiers/rust/: Cargo.toml  README.md  audit-packet-v0.json  build.rs
sdk/verifiers/rust/src/: audit_packet.rs  canonical.rs  chain.rs  cli.rs  lib.rs  main.rs  output.rs  receipt.rs  recorder.rs  schema.rs  signing.rs  types.rs  util.rs
sdk/verifiers/rust/src/aarp/: chain.rs  envelope.rs  jcs.rs  mod.rs  svid.rs  verify.rs
sdk/verifiers/rust/tests/: aarp.rs  audit_packet.rs  canonical.rs  chain.rs  common.rs  conformance_corpus.rs  receipt.rs  schema.rs  util.rs
(+966 files in other folders)
