[package]
name = "pipelock-verifier-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
build = "build.rs"

[[bin]]
name = "pipelock-verifier-rs"
path = "src/main.rs"

[dependencies]
base64 = "=0.22.1"
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["std"] }
hex = "=0.4.3"
jsonschema = { version = "=0.18.3", default-features = false, features = ["draft202012"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.149", features = ["preserve_order"] }
sha2 = "=0.11.0"
thiserror = "=2.0.18"
